Login Signup Speech to Text

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mdb-react-ui-kit": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-speech-to-text": "^0.8.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
